--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^8.5.1",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pug": "^3.0.3"
   }
 }
